--- a/frontend-react/src/pages/apartment/register/style.css
+++ b/frontend-react/src/pages/apartment/register/style.css
@@ -8,6 +8,7 @@
   }
   
   .apartmentModal {
+    position: fixed;
     display: flex;
     flex-direction: column;
     background-color: rgba(246, 243, 243, 1);
