--- a/frontend-react/src/pages/building/list/style.css
+++ b/frontend-react/src/pages/building/list/style.css
@@ -1,40 +1,44 @@
-.header{
-	height: 4vh;
-	display: flex;
+.header {
+    height: 4vh;
+    display: flex;
     flex-direction: row;
-	align-items: center;
-    justify-content: center;
-	margin-bottom: 2vh;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 2vh;
+    gap: 2vw;
 }
 .addButton {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 5px;
-    float: right;
-    margin-left: auto;
-    margin-right: 0;
     border-style: dotted;
     border-width: 2px;
     height: 30px;
     width: fit-content;
-	cursor: pointer;
+    cursor: pointer;
     padding: 5px;
 }
-.addButton a:link, .navigation-div a:visited {
+.addButton a:link,
+.navigation-div a:visited {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap:3px;
-    
+    gap: 3px;
+}
+
+.itemSpace {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .items {
-	display: flex;
-	flex-flow: row wrap;
-	align-content: space-between;
-	justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     height: fit-content;
+    gap: 2vh;
 }
 
 .itemContainer {
@@ -43,14 +47,15 @@
     border-color: grey;
     border-width: 2px;
     margin-top: 2vh;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+        rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 .text {
     margin: 1vh;
 }
 
 .modal-overlay {
-    background: rgba(133, 133, 133, 0.5)    ;
+    background: rgba(133, 133, 133, 0.5);
     position: fixed;
     top: 0;
     bottom: 0;
@@ -71,23 +76,22 @@
     border-style: dashed;
 }
 
-form {
+.buildings {
+    margin-top: 5vh;
+}
+
+.buildingWrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+    width: 100%;
+    min-height: 5vh;
+    height: fit-content;
+    border-style: dashed;
+}
+
+.apartmentWrapper {
     display: flex;
     flex-direction: column;
-    margin: 10px;
-    align-items: left;
-    gap: 20px;
-    margin-top: 2vh;
-
-}
-
-button {
-    padding: 5px;
-    font-size: large;
-    float: right;
-    cursor: pointer;
-}
-
-input {
-    margin-left: 10px;
 }
