--- a/frontend-react/src/pages/apartment/register/style.css
+++ b/frontend-react/src/pages/apartment/register/style.css
@@ -3,18 +3,16 @@
     flex-direction: row;
     float: left;
     align-self: start;
-    margin-top: -20px;
     color: rgba(23, 22, 22, 0.35);
   }
   
   .apartmentModal {
-    position: fixed;
     display: flex;
     flex-direction: column;
     background-color: rgba(246, 243, 243, 1);
     border-radius: 5px;
     width: 40vw;
-    height: fit-content;
+    height: 90vh;
     align-items: center;
     padding: 20px;
     justify-content: center;
@@ -33,7 +31,7 @@
   }
   
   .inputs {
-      width: 30vw;
+      width: 100% !important;
     display: flex;
     flex-direction: column;
       height: fit-content;
